# saltstack

./: .coveragerc  .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml  setup.cfg  setup.py
.pre-commit-hooks/: check-cli-examples.py
docs/: conf.py  index.rst
saltext/cohesity/modules/: cohesity_mod.py
src/saltext/: __init__.py
src/saltext/cohesity/: loader.py  version.py
src/saltext/cohesity/modules/: cohesity_mod.py
tests/: conftest.py
tests/integration/modules/: test_cohesity.py
tests/unit/modules/: test_cohesity.py
